--- a/braden-walker-portfolio/src/styles/less/sidebar.less
+++ b/braden-walker-portfolio/src/styles/less/sidebar.less
@@ -19,6 +19,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        position: relative; // Add to fix Chrome "bug"
         // -webkit-flex-grow: 1;
         // flex-grow: 1;
 
@@ -65,7 +66,8 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: flex-end;
+            justify-content: flex-end; // Breaks in Chrome as of 3/27/19??
+            position: absolute; // Add this to fix Chrome "bug"
             padding-bottom: 50px;
             z-index: 1;
 
